Fix mii scrollbar issue

--- a/style.css
+++ b/style.css
@@ -30,35 +30,42 @@ body {
 	background-image: repeating-linear-gradient(
 		to bottom,
 		#f2f2f2,
-		#f2f2f2 0.3vh,
-		#e4e4e4 0.6vh,
-		#e4e4e4 0.9vh
+		#f2f2f2 0.3dvh,
+		#e4e4e4 0.6dvh,
+		#e4e4e4 0.9dvh
 	);
 }
 
 .menu-section {
 	width: 100%;
-	height: 100vh;
+	height: 100dvh;
 }
 
 .menu-section .top {
 	width: 100%;
 	height: 72%;
-	position: relative;	
+	position: relative;
+}
+
+.menu-section .top .mii-container {
+	position: absolute;
+	width: 100%;
+	height: 100dvh;
+	overflow: hidden;
 }
 
 .menu-section .top .mii-img {
 	position: absolute;
-	bottom: -20%;
-	width: 45%;
+	bottom: 15%;
+	width: 42%;
 	height: auto;
 	max-width: none;
 	aspect-ratio: 1 / 1;
-	transition: bottom 0.5s ease;
+	transition: transform 0.5s ease;
 }
 
 .menu-section .top .mii-img:not(.loaded) {
-	bottom: -100%;
+	transform: translateY(100%);
 }
 
 .menu-section .top .menu-pages .page .tile {
